samples/_failures_safe/1761558420_29b5c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cac034e3.c: In function ‘main’:
./samples/SAFE/__tmp_cac034e3.c:155:21: error: expected ‘;’ at end of input
  155 |             analyzer
      |                     ^
      |                     ;
./samples/SAFE/__tmp_cac034e3.c:155:13: error: expected declaration or statement at end of input
  155 |             analyzer
      |             ^~~~~~~~
./samples/SAFE/__tmp_cac034e3.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cac034e3.c:155:13: error: expected declaration or statement at end of input
